Some move restrictions and move notation

--- a/main.css
+++ b/main.css
@@ -60,6 +60,19 @@ IMG {
   height: 300px;
 }
 
+.nav {
+  border-left: 5px solid gray;
+  border-right: 5px solid gray;
+  border-bottom: 5px solid gray;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+}
+
+.navButton {
+  width: 100px;
+}
+
 UL {
   list-style-type: none;
   padding: 5px;
