--- a/main.css
+++ b/main.css
@@ -49,6 +49,14 @@ UL {
   color: #0020FF;
 }
 
+#exerciseControls {
+	display: none;
+}
+
+#hint {
+	color: gray;
+}
+
 /* Small Screens */
  
 @media only screen and (max-width: 650px) {
@@ -114,7 +122,6 @@ UL {
 
 	.panel {
 		margin-left: 10px;
-		width: 400px;
-		min-height: 500px;
+		width: 350px;
 	}
 }
