--- a/main.css
+++ b/main.css
@@ -1,8 +1,19 @@
 /* All screens */
 
 BODY {
-	background-color: #FFFFFF;
+	--bg-color: white;
+	--text-color: black;
+	background-color: var(--bg-color);
 	font-family: arial;
+	color: var(--text-color);
+}
+
+A {
+	color: #409040;
+}
+
+A:hover {
+	color: #0080FF;
 }
 
 IMG {
@@ -10,21 +21,22 @@ IMG {
 	width: 100%;
 }
 
+.container {
+	text-align: center;
+}
+
 .hide {
 	display: none;
 }
 
 .panelbox {
-	border-left: 5px solid gray;
-	border-right: 5px solid gray;
-	border-top: 5px solid gray;
-	width: 100%;
+	border-bottom: 2px solid gray;
 	padding: 10px;
-	min-height: 75px;
+	text-align: left;
 }
 
 .panelbottom {
-	border-bottom: 5px solid gray;
+	border-bottom: 0px;
 }
 
 .center {
@@ -41,6 +53,10 @@ UL {
 	margin: 0px;
 }
 
+.panel {
+	width: 350px;
+}
+	
 .warn {
 	color: #FF0000;
 }
@@ -61,20 +77,29 @@ UL {
  
 @media only screen and (max-width: 650px) {
 	.board {
-		border: 1px solid black;
+		border: 0px;
 		border-collapse: collapse;
 		display: inline-block;
 		background-color: black;
 	}
 
 	.board TD {
-		border: 2px solid black;
-		height: 11vw;
-		width: 11vw;
+		border: 0px solid black;
+		height: 10.75vw;
+		width: 10.75vw;
 		margin: 0px;
 		padding: 0px;
 		text-align: center;
 		vertical-align: middle;
+	}
+    
+	.board TH {
+		text-align: center;
+		vertical-align: middle;
+		padding: 2px;
+		margin: 0px;
+		border: 0px;
+		background-color: var(--bg-color);
 	}
 	
 	.largeInput {
@@ -84,26 +109,23 @@ UL {
 	.flexrow {
 		display: block;
 	}
-	
-	.panel {
-		margin: 5px;
-		width: 90%;
-	}
 }
 
 /* Large Screens */
- 
+
 @media only screen and (min-width: 651px) {
 	
 	.board {
-		border: 2px solid black;
+		border: 0px solid black;
 		border-collapse: collapse;
 		display: inline-block;
+		margin: 0px;
+		padding: 0px;
 		background-color: black;
 	}
 
 	.board TD {
-		border: 2px solid black;
+		border: 0px solid black;
 		height: 70px;
 		width: 70px;
 		margin: 0px;
@@ -112,16 +134,20 @@ UL {
 		vertical-align: middle;
 	}
 
+	.board TH {
+		text-align: center;
+		vertical-align: middle;
+		padding: 5px;
+		margin: 0px;
+		border: 0px solid black;
+		background-color: var(--bg-color);
+	}
+
 	.largeInput {
 		width: 500px;
 	}
 
 	.flexrow {
 		display: flex;
-	}
-
-	.panel {
-		margin-left: 10px;
-		width: 350px;
 	}
 }
