--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 BODY {
 	--bg-color: white;
 	--text-color: black;
+	background-color: white;
 	background-color: var(--bg-color);
 	font-family: arial;
 	color: var(--text-color);
@@ -94,6 +95,7 @@ UL {
 		padding: 2px;
 		margin: 0px;
 		border: 0px;
+		background-color: white;
 		background-color: var(--bg-color);
 	}
 	
@@ -131,6 +133,7 @@ UL {
 		padding: 5px;
 		margin: 0px;
 		border: 0px solid black;
+		background-color: white;
 		background-color: var(--bg-color);
 	}
 
