--- a/main.css
+++ b/main.css
@@ -70,45 +70,11 @@ UL {
 	color: gray;
 }
 
-/* Small Screens */
- 
-@media only screen and (max-width: 650px) {
-	.board {
-		border: 0px;
-		border-collapse: collapse;
-		display: inline-block;
-		background-color: black;
-	}
 
-	.board TD {
-		border: 0px solid black;
-		height: 10.8vw;
-		width: 10.8vw;
-		margin: 0px;
-		padding: 0px;
-		text-align: center;
-		vertical-align: middle;
-	}
-    
-	.board TH {
-		text-align: center;
-		vertical-align: middle;
-		padding: 2px;
-		margin: 0px;
-		border: 0px;
-		background-color: white;
-		background-color: var(--bg-color);
-	}
-	
-	.flexrow {
-		display: block;
-	}
-}
+/* Very Large Screens */
 
-/* Large Screens */
+@media only screen and (min-width: 1291px) {
 
-@media only screen and (min-width: 651px) {
-	
 	.board {
 		border: 0px solid black;
 		border-collapse: collapse;
@@ -140,5 +106,80 @@ UL {
 
 	.flexrow {
 		display: flex;
+	}
+}
+
+
+/* Large Screens */
+
+@media only screen and (min-width: 651px) and (max-width: 1290px) {
+	
+	.board {
+		border: 0px solid black;
+		border-collapse: collapse;
+		display: inline-block;
+		margin: 0px;
+		padding: 0px;
+		background-color: black;
+	}
+
+	.board TD {
+		border: 0px solid black;
+		height: 70px;
+		width: 70px;
+		margin: 0px;
+		padding: 0px;
+		text-align: center;
+		vertical-align: middle;
+	}
+
+	.board TH {
+		text-align: center;
+		vertical-align: middle;
+		padding: 5px;
+		margin: 0px;
+		border: 0px solid black;
+		background-color: white;
+		background-color: var(--bg-color);
+	}
+
+	.flexrow {
+		display: inline-block;
+	}
+}
+
+
+/* Small Screens */
+ 
+@media only screen and (max-width: 650px) {
+	.board {
+		border: 0px;
+		border-collapse: collapse;
+		display: inline-block;
+		background-color: black;
+	}
+
+	.board TD {
+		border: 0px solid black;
+		height: 10.8vw;
+		width: 10.8vw;
+		margin: 0px;
+		padding: 0px;
+		text-align: center;
+		vertical-align: middle;
+	}
+    
+	.board TH {
+		text-align: center;
+		vertical-align: middle;
+		padding: 2px;
+		margin: 0px;
+		border: 0px;
+		background-color: white;
+		background-color: var(--bg-color);
+	}
+	
+	.flexrow {
+		display: inline-block;
 	}
 }
